# nes-rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  run.sh  sa1_memmap.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/snes-apu/src/: apu.rs  lib.rs  smp.rs  timer.rs
docs/: sa1_ccdma_notes.md  sa1_sources.md
docs/debug/dq3_visual_issue/: analysis.md  register_summary.json
examples/: nes_emulator.rs
examples/egui_ui/: cheat_search.rs  gl_game.rs  hex_viewer.rs  mod.rs
src/: apu.rs  audio.rs  audio_ring.rs  bus.rs  cartridge.rs  cheat.rs  cpu.rs  cpu_bus.rs  cpu_core.rs  debug.rs  debug_flags.rs  debugger.rs  dma.rs  emulator.rs  fake_apu.rs  hud_toast.rs  input.rs  lib.rs  main.rs  ppu.rs  sa1.rs  save_state.rs  savestate.rs  shutdown.rs  sram.rs
src/apu/: mod.rs
src/bus/: mapper.rs
src/cartridge/: load.rs  mod.rs  state.rs
src/cartridge/mapper/: axrom.rs  bandai_fcg.rs  bnrom_nina001.rs  camerica.rs  cnrom.rs  color_dreams.rs  discrete.rs  fixed_irq.rs  fme7.rs  gxrom.rs  irem_g101.rs  irem_h3001.rs  jaleco_jf.rs  jaleco_ss88006.rs  mapper103.rs  mmc1.rs  (+20 more)
src/cpu/: additional_tests.rs  addressing_tests.rs  instructions.rs  mod.rs  tests.rs  tick.rs
src/memory/: mod.rs
src/ppu/: additional_tests.rs  background.rs  complex_mod.rs  memory.rs  mod.rs  new_mod.rs  registers.rs  renderer.rs  sprites.rs  tests.rs
tests/: audio_diag.rs
tools/: apu_handshake_check.sh  burnin.sh  cputest.sh  extract_register_summary.py  run_cpu_tests.sh  smoke.sh  test_all.sh  test_dq3.sh  test_mode7.sh  timing_probe.sh  vram_summary.py
(+11 files in other folders)
