[package]
name = "snes_emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.4"
minifb = "0.25"
png = "0.17"
rodio = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snes-apu = "0.1.12"

[features]
dev = []
default = []

[patch.crates-io]
snes-apu = { path = "crates/snes-apu" }
